# harview

./: .gitignore  Cargo.toml  README.md
media/: demo.tape  vhs.md
src/: app.rs  event.rs  handler.rs  har.rs  main.rs  tui.rs  ui.rs
