[package]
name = "harview"
version = "0.1.0"
authors = ["sheepla"]
license = "MIT"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.86"
byte-unit = "5.1.4"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
clap_derive = "4.5.8"
crossterm = { version = "0.27.0", features = ["event-stream"] }
base64 = "0.22.1"
syntect = "5.2.0"
tempfile = "3.10.1"
prettyish-html = "0.1.1"
futures = "0.3.30"
mime = "0.3.17"
ratatui = "0.26.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.1"
regex = "1"
